@@ -1,5 +1,9 @@
 package uk.gov.companieshouse.web.accounts.controller.smallfull;
 
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.validation.Valid;
+import java.util.Arrays;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -23,12 +27,6 @@ import uk.gov.companieshouse.web.accounts.service.smallfull.ApprovalService;
 import uk.gov.companieshouse.web.accounts.service.smallfull.DirectorService;
 import uk.gov.companieshouse.web.accounts.service.transaction.TransactionService;
 import uk.gov.companieshouse.web.accounts.validation.ValidationError;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.validation.Valid;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 @PreviousController(ReviewController.class)
@@ -78,7 +76,7 @@ public class ApprovalController extends BaseController {
             List<String> approverOptions =
                     Arrays.stream(directorService.getAllDirectors(transactionId, companyAccountsId, true))
                             .map(Director::getName)
-                            .collect(Collectors.toList());
+                            .toList();
 
             Approval approval = new Approval();
             approval.setApproverOptions(approverOptions);
